@@ -1,3 +1,8 @@
+2001-12-07  Earnie Boyd  <earnie@users.sf.net>
+
+	* Makefile.in: Increment VERSION.
+	* include/_mingw.h: Ditto.
+
 2001-12-05  Earnie Boyd  <earnie@users.sf.net>
 
 	* include/strings.h: New File.
